@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/08/06
+	* Added a null-pointer check to skill_initunit() to prevent a crash
+	* Added a while() loop to the client packet processor (for performance)
+	* Added support for kRO 2007-05-14aSakexe langtype 0 login packet 0x2b0
 2007/08/04
 	* Removed weird mvp reward item drop behavior (see topic:160077)
 	* Fixed Cart Revolution not transferring status effects on attack,
